@startuml
skinparam classAttributeIconSize 0

enum Role {
    ADMIN
    PL
    DEV
    TESTER
}

enum Status {
    NEW
    ASSIGNED
    FIXED
    RESOLVED
    CLOSED
    REOPENED
}

enum Priority {
    BLOCKER
    CRITICAL
    MAJOR
    MINOR
    TRIVIAL
}

class User {
    - id : String
    - password : String
    - name : String
    - role : Role
    + getId() : String
    + getPassword() : String
    + getName() : String
    + getRole() : Role
}

class Project {
    - projectId : String
    - name : String
    - createdDate : String
}

class Issue {
    - id : int
    - title : String
    - description : String
    - reporterId : String
    - fixerId : String
    - assigneeId : String
    - priority : Priority
    - status : Status
    - reportedDate : String
    - comments : List<Comment>
    + addComment(comment : Comment) : void
}

class Comment {
    - authorId : String
    - content : String
    - createdDate : String
}

class PermissionManager {
    + canCreateIssue()
    + canAssignIssue()
    + canManageUsers()
}

class AccountManager {
    - users : List<User>
    - currentUser : User
    + addUser()
    + login()
    + logout()
    + getCurrentUser()
}

class IssueService {
    + getAllIssues()
    + createIssue()
    + getIssueById()
    + addComment()
    + selectProject(projectId : String) : Project
    + createIssue(title : String, description : String, priority : Priority) : int
    + getIssueDetail(issueId : int) : void
    + requestStatusChange(newStatus : String, comment : String) : Issue
}

class UserRepository {
    + findById()
    + save()
}

class ProjectRepository {
    + findById()
    + findAll()
    + save()
}

class IssueRepository {
    + findById()
    + findAll()
    + saveAll()
}


' 필드로 상시 참조
AccountManager -> User : manages >
AccountManager -> UserRepository : uses >
IssueService -> PermissionManager : calls >
IssueService -> ProjectRepository : uses >
IssueService -> IssueRepository : uses >
IssueService -> Issue : manages >

' 메서드 파라미터로 일시적 체크
PermissionManager ..> User : checks >

' 엔티티 간 연관 관계
User "0..1" -- "*" Issue : fixes >
User "0..1" -- "*" Issue : assigned to >
User "1" -- "*" Issue : reports >
User "1" -- "*" Comment : writes >

' 생명주기 종속 관계 (컴포지션)
Project "1" *-- "*" Issue : contains >
Issue "1" *-- "*" Comment : owns >

@endum